user-agent/00-user-agent-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-agent
  labels:
    name: user-agent
---
